test/errors/type/list/search.yasl
mt.lookup([], .search)(1)
